# P3-Blockchain-Grid-Trader

./: README.md  server.py  simulator.py  validator.py
ESP32-Communication/: README.md
ESP32-Communication/station/: CMakeLists.txt
ESP32-Communication/station/main/: CMakeLists.txt  main.c
ESP32-Communication/station/main/blockchain/: chain.c  chain.h
ESP32-Communication/station/main/cryptography/: crypto.c  crypto.h
ESP32-Communication/station/main/graphics/: graphics.c  graphics.h
ESP32-Communication/station/main/models/: models.h
ESP32-Communication/station/main/networking/: communication.c  communication.h  lasetsockets.c  lasetsockets.h  wifi_connect.c  wifi_connect.h
ESP32-Communication/station/test/: CMakeLists.txt  README.md
ESP32-Communication/station/test/main/: CMakeLists.txt  expected_output.txt  main.c  test_communication.c  test_crypto.c  test_lasetsockets.c  test_wifi_connect.c
Testing/: client.py  expected_memory_usage.txt  test_wireshark.pcapng
